# cppGL-instanced-vs-multidraw

./: .clang-format  .gitignore  CMakeLists.txt  build.ps1  build.sh  conanfile.py  conanfile.txt  imgui.ini
cmake/: shader_stringify.cmake  stringify_single_shader.cmake
src/: main.cpp
src/geo/: Sphere.cpp  Sphere.h  SphereExample.cpp
src/renderer/: Camera.cpp  Camera.h  GeometryRenderer.cpp  GeometryRenderer.h  InstanceManager.cpp  InstanceManager.h  OrbitCamera.cpp  OrbitCamera.h  RenderMethod.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h
src/shaders/: EmbeddedShaders.h  basic.frag  basic.vert  fragment.glsl  multidraw.frag  multidraw.vert  vertex.glsl
src/ui/: UIManager.cpp  UIManager.h
src/utils/: ShaderLoader.cpp  ShaderLoader.h
